Add information about the time taken for value kicking and bitmap encoding to build benchmarks.

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -125,6 +125,7 @@ cc_library(
         ":fingerprint_store",
         ":index_structure",
         "//common:byte_coding",
+        "//common:profiling",
         "//common:rle_bitmap",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/memory",
@@ -354,6 +355,7 @@ cc_binary(
         ":index_structure",
         ":per_stripe_bloom",
         ":per_stripe_xor",
+        "//common:profiling",
         "@com_google_absl//absl/flags:flag",
         "@com_google_absl//absl/flags:parse",
         "@com_google_benchmark//:benchmark",
